<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/champions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_heading"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/champions" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/heading_top"
        android:textColor="@color/color_text"
        android:background="@color/color_head"
        android:textAlignment="center"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold"
        android:text="@string/app_heading"
        android:textAllCaps="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <ImageView
                android:id="@+id/realmadrid"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/icon_top"
                android:contentDescription="@string/team_nameA"
                android:scaleType="centerInside"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/realmadrid" />
            <TextView
                android:id="@+id/teama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/heading_top"
                android:textStyle="bold"
                android:text="@string/team_nameA"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamA_score" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="GoalForRealMadrid"
                android:text="@string/teamA_Goal" />
            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamA_fouls" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="realMadridFouls"
                android:text="@string/teamA_foul" />
            <TextView
                android:id="@+id/team_a_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamA_corners" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="cornerKicks"
                android:text="@string/teamA_corner" />
            <TextView
                android:id="@+id/team_a_yellowCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamA_yellowCards" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="yellowCardsRealMadrid"
                android:text="@string/teamA_yellowCard" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <ImageView
                android:id="@+id/atletico"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/icon_topb"
                android:scaleType="centerInside"
                android:contentDescription="@string/team_nameB"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/atleticomadrid" />

            <TextView
                android:id="@+id/teamb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/color_text"
                android:layout_marginTop="@dimen/heading_top"
                android:text="@string/team_nameB" />
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamB_score" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:layout_margin="8dp"
                android:onClick="GoalForAtlMadrid"
                android:text="@string/teamB_Goal" />
            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamB_fouls" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="atlMadridFouls"
                android:text="@string/teamB_foul" />
            <TextView
                android:id="@+id/team_b_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamB_corners" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:layout_margin="8dp"
                android:onClick="CornerKicks"
                android:text="@string/teamB_corner" />
            <TextView
                android:id="@+id/team_b_yellowCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/color_text"
                android:textSize="@dimen/score_size"
                android:padding="4dp"
                android:text="@string/teamB_yellowCards" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/color_text"
                android:background="@drawable/roundedbutton"
                android:onClick="yellowCardsAtlMadrid"
                android:text="@string/teamB_yellowCard" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_reset"
        android:background="@drawable/roundedbutton"
        android:onClick="resetScore"
        android:text="@string/Reset_Score" />
</RelativeLayout>